--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'dev.kenuki.dijkstrafx'
-  mainClass = 'dev.kenuki.dijkstrafx.HelloApplication'
+  mainClass = 'dev.kenuki.dijkstrafx.Main'
 }
 
 javafx {
